Refactor location collection interfaces and enhance UI components for better usability

--- a/src/Arcanum.UI/Components/Windows/MainWindows/LoadingScreen.xaml
+++ b/src/Arcanum.UI/Components/Windows/MainWindows/LoadingScreen.xaml
@@ -64,6 +64,7 @@
             <Image Source = "/Arcanum_UI;component/Assets/Logo/ArcanumForeColor.png"
                    HorizontalAlignment = "Center"
                    VerticalAlignment = "Center"
+                   RenderOptions.BitmapScalingMode = "HighQuality"
                    Stretch = "Uniform"
                    Margin = "0,0,25,0" />
         </Border>
