Enhanced AutoCompleteComboBox - Full drop down visible on click - Text will now reset if invalid on user left - Setting selected value should now be possible even if the last filter did not include the item - ESC-Button now works as intended and does not simply reset to the first string the combobox saw

--- a/src/Arcanum.UI/Components/UserControls/BaseControls/AutoCompleteBox/AutoCompleteComboBoxStyle.xaml
+++ b/src/Arcanum.UI/Components/UserControls/BaseControls/AutoCompleteBox/AutoCompleteComboBoxStyle.xaml
@@ -80,7 +80,7 @@
                         </ToggleButton>
 
                         <!-- The TextBox sits in the first column, leaving space for the arrow -->
-                        <styleClasses:CorneredTextBox x:Name = "PART_EditableTextBox"
+                        <TextBox x:Name = "PART_EditableTextBox"
                                                       Grid.Column = "0"
                                                       HorizontalAlignment = "Stretch"
                                                       VerticalAlignment = "Center"
