--- a/src/Arcanum.UI/Components/UserControls/BaseControls/AutoCompleteBox/AutoCompleteComboBoxStyle.xaml
+++ b/src/Arcanum.UI/Components/UserControls/BaseControls/AutoCompleteBox/AutoCompleteComboBoxStyle.xaml
@@ -95,7 +95,7 @@
                                                       Padding = "{TemplateBinding Padding}"
                                                       VerticalContentAlignment = "{TemplateBinding VerticalContentAlignment}"
                                                       VerticalScrollBarVisibility = "Disabled"
-                                                      TextWrapping = "NoWrap" />
+                                                      TextWrapping = "NoWrap" IsUndoEnabled="False" />
 
                         <!-- ADDED BACK: The arrow Path, now in the second column -->
                         <Path Name = "Arrow"
