--- a/src/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
+++ b/src/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
@@ -3,99 +3,63 @@
              xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
-             mc:Ignorable = "d">
+             xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses" mc:Ignorable = "d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width = "1*"
-                              MinWidth = "150" />
+            <ColumnDefinition Width = "1*" MinWidth = "150" />
             <ColumnDefinition Width = "4*" />
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Row = "0"
-                    Grid.Column = "0"
-                    Margin = "4"
-                    Orientation = "Vertical">
-            <styleClasses:BaseButton Content = "Browse Provinces"
-                                     Margin = "2"
-                                     Padding = "4"
+        <StackPanel Grid.Row = "0" Grid.Column = "0" Margin = "4" Orientation = "Vertical">
+            <styleClasses:BaseButton Content = "Browse Provinces" Margin = "2" Padding = "4"
                                      Click = "BrowseProvincesButton_Click" />
 
-            <styleClasses:BaseButton Content = "Log"
-                                     Margin = "2"
-                                     Padding = "4"
-                                     Click = "FindNullMarketsButton_Click" />
+            <styleClasses:BaseButton Content = "Log" Margin = "2" Padding = "4" Click = "FindNullMarketsButton_Click" />
 
-            <styleClasses:BaseButton Content = "Utility"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Utility" Margin = "2" Padding = "4"
                                      Click = "FindNullLocationInMarketButton_Click" />
 
-            <styleClasses:BaseButton Content = "Saving Window"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Saving Window" Margin = "2" Padding = "4"
                                      Click = "OpenSavingWindowButton_Click" />
 
-            <styleClasses:BaseButton Content = "Saving Exporter Window"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Saving Exporter Window" Margin = "2" Padding = "4"
                                      Click = "OpenSavingWindowExporterButton_Click" />
 
-            <styleClasses:BaseButton Content = "Open File Exporter"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Open File Exporter" Margin = "2" Padding = "4"
                                      Click = "OpenTestWindowButton_Click" />
 
-            <styleClasses:BaseButton Content = "Open Nexus Accessor"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Open Nexus Accessor" Margin = "2" Padding = "4"
                                      Click = "OpenNexusAccessorButton_Click" />
-            <styleClasses:BaseButton Content = "Open Eu5 UI Gen"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Open Eu5 UI Gen" Margin = "2" Padding = "4"
                                      Click = "OpenEu5UiGenButton_Click" />
 
-            <styleClasses:BaseButton Content = "Color Picker"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Color Picker" Margin = "2" Padding = "4"
                                      Click = "ColorPickerViewerButton_Click" />
 
-            <styleClasses:BaseButton Content = "Object Creator"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Object Creator" Margin = "2" Padding = "4"
                                      Click = "ObjectCreatorButton_Click" />
 
-            <styleClasses:BaseButton Content = "Modifier Creator"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Modifier Creator" Margin = "2" Padding = "4"
                                      Click = "ModifierCreatorButton_Click" />
 
-            <styleClasses:BaseButton Content = "Graph Viewer"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Graph Viewer" Margin = "2" Padding = "4"
                                      Click = "GraphViewerButton_Click" />
-            <styleClasses:BaseButton Content = "Clear Selection"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Clear Selection" Margin = "2" Padding = "4"
                                      Click = "ClearSelectionButton_Click" />
-            <styleClasses:BaseButton Content = "Clear Selection"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "File Watcher Test" Margin = "2" Padding = "4"
                                      Click = "FileWatcherTest_Click" />
 
-            <styleClasses:BaseButton Content = "Open Multi-Collection Editor"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Open Multi-Collection Editor" Margin = "2" Padding = "4"
                                      Click = "ButtonBase_OnClick" />
 
-            <styleClasses:BaseButton Content = "Insert Log Spacer"
-                                     Margin = "2"
-                                     Padding = "4"
+            <styleClasses:BaseButton Content = "Insert Log Spacer" Margin = "2" Padding = "4"
                                      Click = "InsertLogSpacerButton_Click" />
+
+            <styleClasses:BaseButton Content = "Pops Editor Test" Margin = "2" Padding = "4"
+                                     Click = "PopsEditorTestButton_Click" />
         </StackPanel>
 
-        <ContentPresenter Grid.Column = "1"
-                          x:Name = "DebugView">
+        <ContentPresenter Grid.Column = "1" x:Name = "DebugView">
         </ContentPresenter>
     </Grid>
 </UserControl>
